@@ -28,6 +28,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static org.junit.Assert.*;
+import static org.junit.Assume.assumeTrue;
 
 public class MyJavaFileManagerTest {
 
@@ -155,25 +156,49 @@ public class MyJavaFileManagerTest {
     }
 
     @Test
-    public void invokeNamedMethodHandlesMissingMethods() throws Exception {
+    public void compilesAndLoadsClassWithoutEncapsulationFlags() throws Exception {
+        // Issue #91: runtime compilation must succeed on strongly-encapsulated JDKs
+        // (JEP 403, JDK 17/21/25) without requiring
+        // --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED. This test runs
+        // with no such flags configured; the module-location reflection in
+        // MyJavaFileManager must therefore not fail the compilation.
+        try (CachedCompiler cc = new CachedCompiler(null, null)) {
+            Class<?> clazz = cc.loadFromJava("eg.Issue91",
+                    "package eg;\n" +
+                            "public class Issue91 implements java.util.concurrent.Callable<String> {\n" +
+                            "    public String call() {\n" +
+                            "        return \"ok-\" + System.getProperty(\"java.specification.version\");\n" +
+                            "    }\n" +
+                            "}\n");
+            Object instance = clazz.getDeclaredConstructor().newInstance();
+            @SuppressWarnings("unchecked")
+            java.util.concurrent.Callable<String> callable = (java.util.concurrent.Callable<String>) instance;
+            assertTrue(callable.call().startsWith("ok-"));
+        }
+    }
+
+    @Test
+    public void invokeNamedMethodReturnsDefaultWhenMethodMissing() throws Exception {
+        // Behaviour updated for issue #91: when the delegate does not expose the
+        // named method (e.g. a Java 8 StandardJavaFileManager), the helper now
+        // returns the caller-supplied neutral default rather than throwing, so
+        // compilation degrades gracefully instead of failing.
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         assertNotNull("System compiler required", compiler);
         try (StandardJavaFileManager delegate = compiler.getStandardFileManager(null, null, null)) {
             MyJavaFileManager manager = new MyJavaFileManager(delegate);
             java.lang.reflect.Method method = MyJavaFileManager.class.getDeclaredMethod(
-                    "invokeNamedMethodIfAvailable", javax.tools.JavaFileManager.Location.class, String.class);
+                    "invokeNamedMethodIfAvailable", javax.tools.JavaFileManager.Location.class, String.class, Object.class);
             method.setAccessible(true);
-            try {
-                method.invoke(manager, StandardLocation.CLASS_PATH, "nonExistingMethod");
-                fail("Expected UnsupportedOperationException when method is absent");
-            } catch (java.lang.reflect.InvocationTargetException expected) {
-                assertTrue(expected.getCause() instanceof UnsupportedOperationException);
-            }
+            Object sentinel = new Object();
+            Object result = method.invoke(manager, StandardLocation.CLASS_PATH, "nonExistingMethod", sentinel);
+            assertSame(sentinel, result);
         }
     }
 
     @Test
     public void invokeNamedMethodWrapsInvocationFailures() throws Exception {
+        assumeTrue("module methods need Java 9+", hasJavaFileManagerMethod("listLocationsForModules"));
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         assertNotNull("System compiler required", compiler);
         try (StandardJavaFileManager base = compiler.getStandardFileManager(null, null, null)) {
@@ -182,7 +207,7 @@ public class MyJavaFileManagerTest {
                     new Class[]{StandardJavaFileManager.class},
                     (proxyInstance, method, args) -> {
                         if ("listLocationsForModules".equals(method.getName())) {
-                            throw new InvocationTargetException(new IOException("forced"));
+                            throw new IOException("forced");
                         }
                         try {
                             return method.invoke(base, args);
@@ -192,10 +217,10 @@ public class MyJavaFileManagerTest {
                     });
             MyJavaFileManager manager = new MyJavaFileManager(proxy);
             java.lang.reflect.Method method = MyJavaFileManager.class.getDeclaredMethod(
-                    "invokeNamedMethodIfAvailable", javax.tools.JavaFileManager.Location.class, String.class);
+                    "invokeNamedMethodIfAvailable", javax.tools.JavaFileManager.Location.class, String.class, Object.class);
             method.setAccessible(true);
             try {
-                method.invoke(manager, StandardLocation.CLASS_PATH, "listLocationsForModules");
+                method.invoke(manager, StandardLocation.CLASS_PATH, "listLocationsForModules", null);
                 fail("Expected invocation failure to be wrapped");
             } catch (InvocationTargetException expected) {
                 Throwable cause = expected.getCause();
@@ -204,6 +229,34 @@ public class MyJavaFileManagerTest {
                 }
                 assertTrue("Unexpected cause: " + cause,
                         cause instanceof UnsupportedOperationException || cause instanceof IOException);
+            }
+        }
+    }
+
+    @Test
+    public void invokeNamedMethodPropagatesRuntimeFailures() throws Exception {
+        assumeTrue("module methods need Java 9+", hasJavaFileManagerMethod("inferModuleName"));
+        JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+        assertNotNull("System compiler required", compiler);
+        try (StandardJavaFileManager base = compiler.getStandardFileManager(null, null, null)) {
+            StandardJavaFileManager proxy = (StandardJavaFileManager) Proxy.newProxyInstance(
+                    StandardJavaFileManager.class.getClassLoader(),
+                    new Class[]{StandardJavaFileManager.class},
+                    (proxyInstance, method, args) -> {
+                        if ("inferModuleName".equals(method.getName()))
+                            throw new IllegalStateException("forced runtime failure");
+                        try {
+                            return method.invoke(base, args);
+                        } catch (InvocationTargetException e) {
+                            throw e.getCause();
+                        }
+                    });
+            MyJavaFileManager manager = new MyJavaFileManager(proxy);
+            try {
+                manager.inferModuleName(StandardLocation.CLASS_PATH);
+                fail("runtime failure must not be hidden as missing module information");
+            } catch (IllegalStateException expected) {
+                assertEquals("forced runtime failure", expected.getMessage());
             }
         }
     }
@@ -246,6 +299,16 @@ public class MyJavaFileManagerTest {
             return StandardLocation.valueOf("SYSTEM_MODULES");
         } catch (IllegalArgumentException ignored) {
             return null;
+        }
+    }
+
+    private static boolean hasJavaFileManagerMethod(String name) {
+        try {
+            javax.tools.JavaFileManager.class.getMethod(
+                    name, javax.tools.JavaFileManager.Location.class);
+            return true;
+        } catch (NoSuchMethodException ignored) {
+            return false;
         }
     }
 
